[package]
name = "lite-dar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
env_logger = "0.10.0"
log = "0.4.20"
nalgebra = "0.32.3"
rapier3d = "0.17.2"
serde = "1.0.190"
